cmake_minimum_required(VERSION 3.0)
project(raytracer)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -pedantic -fno-rtti -fno-exceptions -fno-omit-frame-pointer")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
add_executable(raytracer main.cpp)
target_link_libraries(raytracer PRIVATE pthread)
